--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -15,7 +15,7 @@
     width: 346px;
     height: 38px;
     margin-left: 20px;
-    background-color: color("textfield-container");
+    background-color: $textfield-container;
   }
 
   input[type="text"] {
@@ -36,7 +36,7 @@
 
   .filter {
     display: flex;
-    color: color("white");
+    color: $white;
     background-color: color("black");
     background-image: url("../img/filter-bg.jpg");
     background-position: top center;
@@ -94,7 +94,7 @@
         display: flex;
         list-style: none;
         padding: 0;
-        border: 2px solid color("white");
+        border: 2px solid $white;
         width: 320px;
         margin: 0 0 22px;
 
@@ -114,7 +114,7 @@
             top: 3px;
             bottom: 3px;
             width: 2px;
-            background: color("white");
+            background: $white;
           }
         }
       }
