--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,7 +1,7 @@
 .container {
   width: 1200px;
   margin: 0 auto;
-  background-color: color('white');
+  background-color: $white;
   box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
 }
 
