--- a/sass/layout/_main_nav.scss
+++ b/sass/layout/_main_nav.scss
@@ -17,7 +17,7 @@
     list-style: none;
 
     li {
-      padding: 15px 72px 15px 72px;
+      padding: 15px 72px;
 
       &:nth-child(3) {
         margin-left: auto;
@@ -25,13 +25,13 @@
       }
 
       .site-navigation-current {
-        color: color('nav-current');
+        color: $nav-current;
       }
 
       a {
         line-height: 26px;
         font-weight: bold;
-        color: color('black');
+        color: $black;
       }
     }
   }
