--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/_button.scss";
 @import "components/_form.scss";
 @import "components/_modal.scss";
+@import "components/_sliderrange.scss";
 
 @import "pages/_index.scss";
 @import "pages/_inner-page.scss";
