--- a/sass/components/_sliderrange.scss
+++ b/sass/components/_sliderrange.scss
@@ -15,6 +15,14 @@ $slider-outrange: gray;
       }
 
       .noUi-handle {
+        height: 20px;
+        width: 20px;
+        top: -10px;
+        right: -10px;
+        border-radius: 100%;
+        background: gray;
+        box-shadow: none;
+        border: 6px solid white;
 
         &:before, &:after {
           display: none;
