--- a/sass/pages/_inner-page.scss
+++ b/sass/pages/_inner-page.scss
@@ -65,7 +65,7 @@
         background-image: url("/img/icon-up-dir.svg");
         background-repeat: no-repeat;
         background-position: 0 0;
-        // костыль для скрытия текста
+        /*костыль для скрытия текста*/
         text-indent: 400px;
         margin-right: 12px;
       }
@@ -74,7 +74,7 @@
         background-image: url("/img/icon-down-dir.svg");
         background-repeat: no-repeat;
         background-position: 0 0;
-        // костыль для скрытия текста
+         /*костыль для скрытия текста*/
         text-indent: 400px;
         margin-right: 73px;
       }
