--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -62,5 +62,10 @@
   align-items: center;
   justify-content: center;
   background-color: $blue;
+}
 
+.filters-submit-button {
+  width: 135px;
+  height: 35px;
+  border: 2px solid white;
 }
