--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,5 +11,6 @@ $brown-hover: #604e43;
 $brown-active: #503e33;
 $footer-white: #f9fbf6;
 $gray: #333;
+$gray-line: #e5e5e5;
 $shadow-cont: #000101;
 $nav-current: #766357;
