--- a/sass/pages/_inner-page.scss
+++ b/sass/pages/_inner-page.scss
@@ -87,15 +87,22 @@
       flex-direction: column;
 
       .result-item {
-        margin-left: 72px;
+        display: flex;
+        flex-direction: column;
+        padding: 30px 0 30px 72px;
+        height: 152px;
+        border-top: 1px solid $gray-line;
 
-/*        &::before {
-          content: "";
-          border: 2px solid black;
-        }*/
+        &:nth-last-child(1) {
+          border-bottom: 1px solid $gray-line;
+        }
 
         h3 {
           font-weight: bold;
+        }
+
+        .result-image {
+          margin-right: 30px;
         }
       }
     }
